Improve auto-merge security and fix logging error
- Add user restriction to auto-merge workflow (only JonnieSparkles can trigger)
- Fix JavaScript error when reading merge result commit message
- Prevents random users from exploiting cursor/ branch auto-merge
- Auto-merge system is now secure and working properly

--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -8,8 +8,8 @@ on:
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
-    # Only run for PRs from cursor/ branches (agent-created PRs)
-    if: startsWith(github.head_ref, 'cursor/')
+    # Only run for PRs from cursor/ branches created by trusted users
+    if: startsWith(github.head_ref, 'cursor/') && github.actor == 'JonnieSparkles'
     permissions:
       contents: write
       pull-requests: write
